--- a/styles.css
+++ b/styles.css
@@ -11,16 +11,16 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 :root {
-  --bs-blue: #007bff;
-  --bs-indigo: #6610f2;
+  --bs-blue: #2552D9;
+  --bs-indigo: #2964D9;
   --bs-purple: #6f42c1;
   --bs-pink: #e83e8c;
   --bs-red: #dc3545;
-  --bs-orange: #fd7e14;
+  --bs-orange: #F2B29B;
   --bs-yellow: #ffc107;
   --bs-green: #28a745;
-  --bs-teal: #20c997;
-  --bs-cyan: #17a2b8;
+  --bs-teal: #0487D9;
+  --bs-cyan: #91C5F2;
   --bs-black: #000;
   --bs-white: #fff;
   --bs-gray: #6c757d;
