--- a/styles.css
+++ b/styles.css
@@ -498,6 +498,10 @@ progress {
   font-weight: 300;
 }
 
+.hero-section {
+    padding-left: 20px; /* Adjust this value as needed */
+}
+
 .display-1 {
   font-size: calc(1.625rem + 4.5vw);
   font-weight: 300;
