--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ body {
     margin: 0;
     padding: 0;
     color: #F6AE2D; /* replace with the color you choose */
-    background-color: #86BBD8;
+    background-color: #f0f0f0;
 }
 
 .navbar {
@@ -199,7 +199,7 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   line-height: 1.2;
-  color: #343a40;
+  color: #8498BF;
 }
 
 h1, .h1 {
