--- a/css/style.css
+++ b/css/style.css
@@ -584,154 +584,144 @@ section.resume-section .resume-item .resume-date {
                    PORTFOLIO
 ======================================================*/
 
-#portfolio {
-    background-image: url(../img/Dark-Blue-Leaf-Background.png) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 3rem 0;
-    max-width: 100% !important;
-    width: 100% !important;
-    background-color: #333;
-}
+(#portfolio {
+        background: url(img/Dark-Blue-Leaf-Background.png) no-repeat center center fixed;
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 3rem 0;
+        max-width: 100% !important;
+        width: 100% !important;
+        background-color: #333;
+        /* Dark background color */
+        color: #fff;
+        /* White text color */
+    }
 
-.port-head-cont {
-    margin: 20px auto 40px auto;
-    text-align: center;
-}
+    .port-head-cont {
+        margin: 20px auto 40px auto;
+        text-align: center;
+    }
 
-.port-head-cont button {
-    margin: 5px 2px;
-}
+    .port-head-cont button {
+        margin: 5px 2px;
+    }
 
-#portfolio .portfolio-item {
-    right: 0;
-    margin: 0 0 15px;
-}
-
-#portfolio .portfolio-item .portfolio-link {
-    position: relative;
-    display: block;
-    max-width: 400px;
-    margin: 0 auto;
-    cursor: pointer;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption-port {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    transition: all ease 0.5s;
-    opacity: 0;
-    background: #317bc5;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption-port:hover {
-    opacity: 1;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption-port .caption-port-content {
-    font-size: 20px;
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    height: 20px;
-    margin-top: -12px;
-    text-align: center;
-    color: white;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption-port .caption-port-content h3,
-#portfolio .portfolio-item .portfolio-link .caption-port .caption-port-content h4 {
-    margin: 0;
-}
-
-#portfolio * {
-    z-index: 2;
-}
-
-@media (min-width: 767px) {
     #portfolio .portfolio-item {
-        margin: 0 0 30px;
+        right: 0;
+        margin: 0 0 15px;
     }
-}
 
-.portfolio-modal .modal-dialog {
-    max-width: 100%;
-    min-height: 100%;
-    margin: 0;
-    padding: 0;
-    text-align: left;
-    border: none;
-    border-radius: 0;
-    background-clip: border-box;
-    box-shadow: none;
-}
+    #portfolio .portfolio-item .portfolio-link {
+        position: relative;
+        display: block;
+        max-width: 400px;
+        margin: 0 auto;
+        cursor: pointer;
+    }
 
-.portfolio-modal .title-bar {
-    padding: 0 0 50px 0;
-}
+    #portfolio .portfolio-item .portfolio-link .caption-port {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        transition: all ease 0.5s;
+        opacity: 0;
+        background: rgba(0, 0, 0, 0.7);
+        /* Dark overlay on hover */
+    }
 
-.portfolio-modal .modal-dialog .modal-content {
-    padding: 10px 0 100px 0;
-    border: 0;
-    border-radius: 0;
-}
+    #portfolio .portfolio-item .portfolio-link .caption-port:hover {
+        opacity: 1;
+    }
 
-.portfolio-modal .modal-dialog .modal-content img {
-    margin-bottom: 30px;
-}
+    #portfolio .portfolio-item .portfolio-link .caption-port .caption-port-content {
+        font-size: 20px;
+        position: absolute;
+        top: 50%;
+        width: 100%;
+        height: 20px;
+        margin-top: -12px;
+        text-align: center;
+        color: white;
+    }
 
-.portfolio-modal .modal-dialog .modal-content .item-details {
-    margin: 30px 0;
-}
+    #portfolio .portfolio-item .portfolio-link .caption-port .caption-port-content h3,
+    #portfolio .portfolio-item .portfolio-link .caption-port .caption-port-content h4 {
+        margin: 0;
+    }
 
-.portfolio-modal .close-modal {
-    position: absolute;
-    top: 25px;
-    right: 25px;
-    width: 75px;
-    height: 75px;
-    cursor: pointer;
-    background-color: transparent;
-}
+    #portfolio * {
+        z-index: 2;
+    }
 
-.portfolio-modal .close-modal:hover {
-    opacity: 0.3;
-}
+    @media (min-width: 767px) {
+        #portfolio .portfolio-item {
+            margin: 0 0 30px;
+        }
+    }
 
-.portfolio-modal .close-modal .lr {
-    z-index: 1051;
-    width: 1px;
-    height: 75px;
-    margin-left: 35px;
-    transform: rotate(45deg);
-    background-color: #2C3E50;
-}
+    .portfolio-modal .modal-dialog {
+        max-width: 100%;
+        min-height: 100%;
+        margin: 0;
+        padding: 0;
+        text-align: left;
+        border: none;
+        border-radius: 0;
+        background-clip: border-box;
+        box-shadow: none;
+    }
 
-.portfolio-modal .close-modal .lr .rl {
-    z-index: 1052;
-    width: 1px;
-    height: 75px;
-    transform: rotate(90deg);
-    background-color: #2C3E50;
-}
+    .portfolio-modal .title-bar {
+        padding: 0 0 50px 0;
+    }
 
-.portfolio-modal .modal-backdrop {
-    display: none;
-    opacity: 0;
-}
+    .portfolio-modal .modal-dialog .modal-content {
+        padding: 10px 0 100px 0;
+        border: 0;
+        border-radius: 0;
+    }
 
-@media (max-width: 850px) {
+    .portfolio-modal .modal-dialog .modal-content img {
+        margin-bottom: 30px;
+    }
+
+    .portfolio-modal .modal-dialog .modal-content .item-details {
+        margin: 30px 0;
+    }
+
     .portfolio-modal .close-modal {
-        display: none;
+        position: absolute;
+        top: 25px;
+        right: 25px;
+        width: 75px;
+        height: 75px;
+        cursor: pointer;
+        background-color: transparent;
     }
-}
+
+    .portfolio-modal .close-modal:hover {
+        opacity: 0.3;
+    }
+
+    .portfolio-modal .close-modal .lr,
+    .portfolio-modal .close-modal .lr .rl {
+        background-color: #fff;
+        /* White color for close button */
+    }
+
+    .portfolio-modal .modal-backdrop {
+        display: none;
+        opacity: 0;
+    }
+
+    @media (max-width: 850px) {
+        .portfolio-modal .close-modal {
+            display: none;
+        }
+    })
 
 /*====================================================
                       SKILLS
