--- a/css/style.css
+++ b/css/style.css
@@ -321,6 +321,65 @@ section.resume-section .resume-item .resume-date {
     color: #2164a6 !important;
 }
 
+.modal {
+    */ display: none;
+    */ position: fixed;
+    */ z-index: 1;
+    */ padding-top: 100px;
+    */ left: 0;
+    */ top: 0;
+    */ width: 100%;
+    */ height: 100%;
+    */ overflow: auto;
+    */ background-color: rgb(0, 0, 0);
+    */ background-color: rgba(0, 0, 0, 0.9);
+    */
+}
+
+*/ */ .modal-content {
+    */ margin: auto;
+    */ display: block;
+    */ width: 80%;
+    */ max-width: 700px;
+    */
+}
+
+*/ */ .modal-image {
+    */ width: 100%;
+    */ height: auto;
+    */
+}
+
+*/ */ .close {
+    */ position: absolute;
+    */ top: 15px;
+    */ right: 35px;
+    */ color: #f1f1f1;
+    */ font-size: 40px;
+    */ font-weight: bold;
+    */ transition: 0.3s;
+    */
+}
+
+*/ */ .close:hover,
+*/ .close:focus {
+    */ color: #bbb;
+    */ text-decoration: none;
+    */ cursor: pointer;
+    */
+}
+
+*/ */ @media only screen and (max-width: 700px) {
+    */ .modal-content {
+        */ width: 100%;
+        */
+    }
+
+    */
+}
+
+*/
+
 /*==================================================
                       ABOUT
 ====================================================*/
@@ -475,141 +534,143 @@ section.resume-section .resume-item .resume-date {
 ======================================================*/
 
 #portfolio {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        padding: 3rem 0;
-        max-width: 100% !important;
-        width: 100% !important;
-        background-color: #333;
-        /* Dark background color */
-        color: #fff;
-        /* White text color */
-    }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 3rem 0;
+    max-width: 100% !important;
+    width: 100% !important;
+    background-color: #333;
+    /* Dark background color */
+    color: #fff;
+    /* White text color */
+}
 
-    .port-head-cont {
-        margin: 20px auto 40px auto;
-        text-align: center;
-    }
+.port-head-cont {
+    margin: 20px auto 40px auto;
+    text-align: center;
+}
 
-    .port-head-cont button {
-        margin: 5px 2px;
-    }
+.port-head-cont button {
+    margin: 5px 2px;
+}
 
+#portfolio .portfolio-item {
+    right: 0;
+    margin: 0 0 15px;
+}
+
+#portfolio .portfolio-item .portfolio-link {
+    position: relative;
+    display: block;
+    max-width: 400px;
+    margin: 0 auto;
+    cursor: pointer;
+}
+
+#portfolio .portfolio-item .portfolio-link .caption-port {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transition: all ease 0.5s;
+    opacity: 0;
+    background: rgba(0, 0, 0, 0.7);
+    /* Dark overlay on hover */
+}
+
+#portfolio .portfolio-item .portfolio-link .caption-port:hover {
+    opacity: 1;
+}
+
+#portfolio .portfolio-item .portfolio-link .caption-port .caption-port-content {
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    height: 20px;
+    margin-top: -12px;
+    text-align: center;
+    color: white;
+}
+
+#portfolio .portfolio-item .portfolio-link .caption-port .caption-port-content h3,
+#portfolio .portfolio-item .portfolio-link .caption-port .caption-port-content h4 {
+    margin: 0;
+}
+
+#portfolio * {
+    z-index: 2;
+}
+
+@media (min-width: 767px) {
     #portfolio .portfolio-item {
-        right: 0;
-        margin: 0 0 15px;
+        margin: 0 0 30px;
     }
+}
 
-    #portfolio .portfolio-item .portfolio-link {
-        position: relative;
-        display: block;
-        max-width: 400px;
-        margin: 0 auto;
-        cursor: pointer;
-    }
+.portfolio-modal .modal-dialog {
+    max-width: 100%;
+    min-height: 100%;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+    border: none;
+    border-radius: 0;
+    background-clip: border-box;
+    box-shadow: none;
+}
 
-    #portfolio .portfolio-item .portfolio-link .caption-port {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        transition: all ease 0.5s;
-        opacity: 0;
-        background: rgba(0, 0, 0, 0.7);
-        /* Dark overlay on hover */
-    }
+.portfolio-modal .title-bar {
+    padding: 0 0 50px 0;
+}
 
-    #portfolio .portfolio-item .portfolio-link .caption-port:hover {
-        opacity: 1;
-    }
+.portfolio-modal .modal-dialog .modal-content {
+    padding: 10px 0 100px 0;
+    border: 0;
+    border-radius: 0;
+}
 
-    #portfolio .portfolio-item .portfolio-link .caption-port .caption-port-content {
-        font-size: 20px;
-        position: absolute;
-        top: 50%;
-        width: 100%;
-        height: 20px;
-        margin-top: -12px;
-        text-align: center;
-        color: white;
-    }
+.portfolio-modal .modal-dialog .modal-content img {
+    margin-bottom: 30px;
+}
 
-    #portfolio .portfolio-item .portfolio-link .caption-port .caption-port-content h3,
-    #portfolio .portfolio-item .portfolio-link .caption-port .caption-port-content h4 {
-        margin: 0;
-    }
+.portfolio-modal .modal-dialog .modal-content .item-details {
+    margin: 30px 0;
+}
 
-    #portfolio * {
-        z-index: 2;
-    }
+.portfolio-modal .close-modal {
+    position: absolute;
+    top: 25px;
+    right: 25px;
+    width: 75px;
+    height: 75px;
+    cursor: pointer;
+    background-color: transparent;
+}
 
-    @media (min-width: 767px) {
-        #portfolio .portfolio-item {
-            margin: 0 0 30px;
-        }
-    }
+.portfolio-modal .close-modal:hover {
+    opacity: 0.3;
+}
 
-    .portfolio-modal .modal-dialog {
-        max-width: 100%;
-        min-height: 100%;
-        margin: 0;
-        padding: 0;
-        text-align: left;
-        border: none;
-        border-radius: 0;
-        background-clip: border-box;
-        box-shadow: none;
-    }
+.portfolio-modal .close-modal .lr,
+.portfolio-modal .close-modal .lr .rl {
+    background-color: #333;
+    /* White color for close button */
+}
 
-    .portfolio-modal .title-bar {
-        padding: 0 0 50px 0;
-    }
+.portfolio-modal .modal-backdrop {
+    display: none;
+    opacity: 0;
+}
 
-    .portfolio-modal .modal-dialog .modal-content {
-        padding: 10px 0 100px 0;
-        border: 0;
-        border-radius: 0;
-    }
-
-    .portfolio-modal .modal-dialog .modal-content img {
-        margin-bottom: 30px;
-    }
-
-    .portfolio-modal .modal-dialog .modal-content .item-details {
-        margin: 30px 0;
-    }
-
+@media (max-width: 850px) {
     .portfolio-modal .close-modal {
-        position: absolute;
-        top: 25px;
-        right: 25px;
-        width: 75px;
-        height: 75px;
-        cursor: pointer;
-        background-color: transparent;
-    }
-
-    .portfolio-modal .close-modal:hover {
-        opacity: 0.3;
-    }
-
-    .portfolio-modal .close-modal .lr,
-    .portfolio-modal .close-modal .lr .rl {
-        background-color: #333;
-        /* White color for close button */
-    }
-
-    .portfolio-modal .modal-backdrop {
         display: none;
-        opacity: 0;
     }
+}
 
-    @media (max-width: 850px) {
-        .portfolio-modal .close-modal {
-            display: none;
-        }
-    };
+;
 
 /*====================================================
                       SKILLS
