--- a/css/style.css
+++ b/css/style.css
@@ -320,7 +320,82 @@ section.resume-section .resume-item .resume-date {
 .text-primary {
     color: #2164a6 !important;
 }
-
+.gallery { */
+    display: flex; */
+    flex-wrap: wrap; */
+    justify-content: space-evenly; */
+    margin: 0 auto; */
+    width: 90%; */
+    max-width: 1000px; */
+    padding-bottom: 20px; */
+  } */
+*/
+  .gallery-item { */
+    display: flex; */
+    flex-direction: column; */
+    align-items: center; */
+    justify-content: center; */
+    width: 300px; */
+    height: 300px; */
+    margin: 10px; */
+    position: relative; */
+    cursor: pointer; */
+    border-radius: 5px; */
+    overflow: hidden; */
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5); */
+  } */
+*/
+  .gallery-item img { */
+    width: 100%; */
+    height: 100%; */
+    object-fit: cover; */
+    transition: transform 0.2s; */
+  } */
+*/
+  .hover-text { */
+    position: absolute; */
+    bottom: 0; */
+    left: 0; */
+    width: 100%; */
+    height: 100%; */
+    padding: 10px; */
+    color: white; */
+    font-size: 1.5rem; */
+    font-weight: bold; */
+    background-color: rgba(0, 0, 0, 0.5); */
+    display: flex; */
+    flex-direction: column; */
+    align-items: center; */
+    justify-content: center; */
+    opacity: 0; */
+    transition: opacity 0.2s; */
+    text-align: center; */
+  } */
+*/
+  .gallery-item:hover .hover-text { */
+    opacity: 1; */
+  } */
+*/
+  .gallery-item:hover img { */
+    transform: scale(1.1); */
+  } */
+*/
+  .modal { */
+    display: none; */
+    position: fixed; */
+    z-index: 1; */
+    padding-top: 100px; */
+    left: 0; */
+    top: 0; */
+    width: 100%; */
+    height: 100%; */
+    overflow: auto; */
+    background-color: rgb(0, 0, 0); */
+    background-color: rgba(0, 0, 0, 0.9); */
+  } */
+*/
+  .modal-content { */
+    margin: auto; */
 .modal {
     */ display: none;
     */ position: fixed;
